add new endpoint latest newsletters
