# storage/api-docs/api-docs.json
@@ -82,6 +82,20 @@
                 }
             }
         },
+        "/api/v2/latest/newsletters": {
+            "get": {
+                "tags": [
+                    "Latest Released"
+                ],
+                "summary": "Get latest newsletters",
+                "operationId": "getLatestNewsletters",
+                "responses": {
+                    "200": {
+                        "description": "success"
+                    }
+                }
+            }
+        },
         "/api/v2/latest/packages": {
             "get": {
                 "tags": [
@@ -510,6 +524,10 @@
         {
             "name": "Distributions",
             "description": "API Endpoints of Distribution"
+        },
+        {
+            "name": "Latest Released",
+            "description": "API Endpoints of latest released"
         },
         {
             "name": "Latest Released",
